@@ -1,3 +1,8 @@
+2009-10-18  Alan Modra  <amodra@bigpond.net.au>
+
+	* as.h (know): Don't define as empty.
+	* config/tc-arm.c (make_mapping_symbol): Revert last patch.
+
 2009-10-18  Matthias Klose  <doko@ubuntu.com>
 
 	* config/tc-arm.c (make_mapping_symbol): Add braces to avoid empty body
